# Unisys_Model

./: .dockerignore  .gitignore  COLAB_QUICK_START.md  COLAB_TRAINING_GUIDE.md  DASHBOARD.md  DIT_SEC_V3_GUIDE.md  DIT_SEC_V3_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  KUBEHEAL_V4_PRD.md  KubeHeal_PRD_v3.docx  KubeHeal_PRD_v3.md  README.md  RETRAINING_PLAN.md  TEST_SUITE.md  TRAINING_DOCS_INDEX.md  TRAINING_PLAN_ANALYSIS.md  TRAINING_READY_SUMMARY.md  USAGE.md  dit_sec_test_results.json  health_agent_v2.ipynb  main.py  pyproject.toml  pytest.ini  requirements.txt  training_dit_sec_v3_colab.py  training_dit_sec_v3_improved.py  visualize_drift_testing.py
.claude/: settings.local.json
agents/: .dockerignore
chaos/: chaos-pods.yaml  ransomware-simulator.py
dashboard/: .dockerignore  app.py  fastapi_app.py  requirements.txt
demo/: victim-app.yaml
deploy/: 01-namespace.yaml  02-redis.yaml  03-health-agent-updated.yaml  03-health-agent.yaml  04-servicemonitor.yaml  Dockerfile.ditsec-embedded  build-docker-image.sh  setup-testing-env.sh
dockerfiles/: Dockerfile.base  Dockerfile.dashboard  Dockerfile.dcm  Dockerfile.fusion  Dockerfile.health  Dockerfile.health_model  Dockerfile.model  Dockerfile.ransomware  Dockerfile.security  Dockerfile.security_model
docs/: ANALYSIS_SUMMARY.md  ARCHITECTURE_QUICK_REFERENCE.md  KUBEHEAL_PRD_V3_ANALYSIS.md  PHASE_3_STATUS.txt  README_ANALYSIS.md  TEST_REPORT.md  VERIFICATION_COMPLETION_REPORT.md  architecture-flow.md  architecture-flow.mmd
k8s/: .dockerignore  dashboard-deployment.yaml  dcm-deployment.yaml  falco.yaml  (+8 more)
(+148 files in other folders)
