[project]
name = "unisys-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "kubernetes>=28.0.0",
    "aioredis>=2.0.0",
    "pydantic>=2.6.0",
    "aiohttp>=3.9.0",
    "prometheus-client>=0.19.0",
    "numpy>=1.26.0",
    "PyYAML>=6.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
]
